sumo/tests/netconvert/import/XML/errors/broken_edge/edge#shape__false4d/errors.netconvert
Error: Shape of a(n) edge is broken: the position is neither x,y nor x,y,z.
Quitting (on error).
